discussion/kv_engine/184675/184675_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add setHistoryRetentionBytes to KVStore

Implemented only in magma-kvstore.cc and calls through to
SetHistoryRetentionBytes

Change-Id: I597f444add833c77180ae4bb07ce7ee94a788530

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:11:36.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 15:11:58.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332640/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 15:31:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/807/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/807/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/807/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/985/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/985/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/778/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/778/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1095/ : FAILURE

Compile error at [2023-01-16T15:16:26.348Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1095/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/813/ : FAILURE

Compile error at [2023-01-16T15:19:08.608Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/828/ : FAILURE

Compile error at [2023-01-16T15:30:52.234Z] ../kv_engine/engines/ep/tests/module_tests/history_scan_test.cc:41:22:
error: ?MockMagmaKVStore? does not name a type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/828/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/818/ : FAILURE

Compile error at [2023-01-16T15:15:27.820Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/818/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/827/ : FAILURE

Compile error at [2023-01-16T15:16:22.042Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/827/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/799/ : FAILURE

Compile error at [2023-01-16T15:26:59.327Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/799/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/819/ : FAILURE

Compile error at [2023-01-16T15:23:05.524Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/819/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22187/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
